--- a/employee_listing_page.html
+++ b/employee_listing_page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>عرض الموظفين - شغلني</title>
+    <title>الموظفون المتاحون - شغلني</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -83,7 +83,7 @@
 
     <div class="container mx-auto px-4 py-8">
         <div class="flex flex-col md:flex-row justify-between items-center mb-8">
-            <h1 class="text-3xl font-bold text-gray-800 mb-4 md:mb-0">الموظفين المتاحين</h1>
+            <h1 class="text-4xl font-extrabold text-gray-900 mb-4 md:mb-0">الموظفون المتاحون</h1>
             <div class="relative w-full md:w-1/3">
                 <input type="text" id="searchInput" placeholder="ابحث عن موظف..."
                        class="w-full pr-10 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 text-right">
@@ -94,21 +94,34 @@
         </div>
 
         <div class="flex flex-col md:flex-row md:space-x-4 rtl:space-x-reverse mb-6">
-            <div class="w-full md:w-1/3 mb-4 md:mb-0">
+            <div class="w-full md:w-1/2 mb-4 md:mb-0">
                 <label for="stateFilter" class="block text-sm font-medium text-gray-700">فلتر حسب الولاية:</label>
                 <select id="stateFilter" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-blue-500 focus:border-blue-500 rounded-md">
                     <option value="">جميع الولايات</option>
-                    <option value="الرياض">الرياض</option>
-                    <option value="جدة">جدة</option>
-                    <option value="الدمام">الدمام</option>
-                    </select>
+                    <option value="الخرطوم">ولاية الخرطوم</option>
+                    <option value="الجزيرة">ولاية الجزيرة</option>
+                    <option value="البحر الأحمر">ولاية البحر الأحمر</option>
+                    <option value="كسلا">ولاية كسلا</option>
+                    <option value="القضارف">ولاية القضارف</option>
+                    <option value="سنار">ولاية سنار</option>
+                    <option value="النيل الأبيض">ولاية النيل الأبيض</option>
+                    <option value="النيل الأزرق">ولاية النيل الأزرق</option>
+                    <option value="الشمالية">الولاية الشمالية</option>
+                    <option value="نهر النيل">ولاية نهر النيل</option>
+                    <option value="شمال كردفان">ولاية شمال كردفان</option>
+                    <option value="جنوب كردفان">ولاية جنوب كردفان</option>
+                    <option value="غرب كردفان">ولاية غرب كردفان</option>
+                    <option value="شمال دارفور">ولاية شمال دارفور</option>
+                    <option value="جنوب دارفور">ولاية جنوب دارفور</option>
+                    <option value="غرب دارفور">ولاية غرب دارفور</option>
+                    <option value="وسط دارفور">ولاية وسط دارفور</option>
+                    <option value="شرق دارفور">ولاية شرق دارفور</option>
+                </select>
             </div>
-            <div class="w-full md:w-1/3">
-                <label for="statusFilter" class="block text-sm font-medium text-gray-700">فلتر حسب الحالة:</label>
-                <select id="statusFilter" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-blue-500 focus:border-blue-500 rounded-md">
-                    <option value="">جميع الحالات</option>
-                    <option value="متاح للعمل">متاح للعمل</option>
-                    <option value="غير متاح">غير متاح للعمل</option>
+            <div class="w-full md:w-1/2">
+                <label for="cityFilter" class="block text-sm font-medium text-gray-700">فلتر حسب المدينة:</label>
+                <select id="cityFilter" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-blue-500 focus:border-blue-500 rounded-md" disabled>
+                    <option value="">جميع المدن</option>
                 </select>
             </div>
         </div>
@@ -121,10 +134,10 @@
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-        import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-analytics.js";
-        import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+        import { getFirestore, collection, getDocs, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+        import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
 
-        // Your web app's Firebase configuration
+        // **1. تهيئة Firebase**
         const firebaseConfig = {
           apiKey: "AIzaSyBsIaCjE7QOQ6QkhqhCIMA3sLdMvxBxPHk",
           authDomain: "shaglni-c64c0.firebaseapp.com",
@@ -135,41 +148,51 @@
           measurementId: "G-98GQGZS09W"
         };
 
-        // Initialize Firebase
         const app = initializeApp(firebaseConfig);
-        const analytics = getAnalytics(app);
         const db = getFirestore(app);
+        const auth = getAuth(app);
 
+        // **2. ربط عناصر الواجهة بمتغيرات في الكود**
         const employeesList = document.getElementById('employeesList');
         const loadingIndicator = document.getElementById('loadingIndicator');
         const noEmployeesFound = document.getElementById('noEmployeesFound');
         const searchInput = document.getElementById('searchInput');
         const stateFilter = document.getElementById('stateFilter');
-        const statusFilter = document.getElementById('statusFilter');
+        const cityFilter = document.getElementById('cityFilter');
 
         let allEmployees = [];
+        let currentUserId = null;
 
-        // قاموس المرادفات
-        const synonyms = {
-            'صناعي': ['عامل', 'صانع', 'فني'],
-            'دهانات': ['دهان'],
-            'جبس': ['جبص'],
-            'مبلط': ['بلاط'],
-            'نجارة': ['نجار'],
-            'كهرباء': ['كهربائي'],
-            'باكستاني': ['باكستاني']
+        // **3. قاعدة بيانات الولايات والمدن في السودان**
+        // يمكنك إضافة أو تعديل المدن في هذا الكائن
+        const citiesByState = {
+            'الخرطوم': ['الخرطوم', 'أم درمان', 'بحري'],
+            'الجزيرة': ['ود مدني', 'الحصاحيصا', 'المناقل'],
+            'البحر الأحمر': ['بورتسودان', 'سواكن', 'طوكر'],
+            'كسلا': ['كسلا', 'حلفا الجديدة', 'أروما'],
+            'القضارف': ['القضارف', 'القلابات', 'الفو'],
+            'سنار': ['سنار', 'الدالي والمزموم', 'ود النيل'],
+            'النيل الأبيض': ['ربك', 'كوستي', 'الدويم'],
+            'النيل الأزرق': ['الدمازين', 'الروصيرص', 'الكرمك'],
+            'الشمالية': ['دنقلا', 'عطبرة', 'كريمة'],
+            'نهر النيل': ['الدامر', 'شندي', 'عطبرة'],
+            'شمال كردفان': ['الأبيض', 'أم روابة', 'الرهد'],
+            'جنوب كردفان': ['كادقلي', 'أبو جبيهة', 'تلودي'],
+            'غرب كردفان': ['الفولة', 'النهود', 'المجلد'],
+            'شمال دارفور': ['الفاشر', 'كبكابية', 'مليط'],
+            'جنوب دارفور': ['نيالا', 'الضعين', 'برام'],
+            'غرب دارفور': ['الجنينة', 'كرينك', 'كلبس'],
+            'وسط دارفور': ['زالنجي', 'ودعة', 'أم دخن'],
+            'شرق دارفور': ['الضعين', 'عديلة', 'أبوكارنكا']
         };
 
-        // وظيفة جلب الموظفين من Firebase
+        // **4. دالة لجلب الموظفين من Firestore**
         async function fetchEmployees() {
             loadingIndicator.classList.remove('hidden');
             try {
                 const querySnapshot = await getDocs(collection(db, "employees"));
                 allEmployees = querySnapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
-
-                // ترتيب الموظفين حسب التاريخ الأحدث أولاً
                 allEmployees.sort((a, b) => new Date(b.timestamp) - new Date(a.timestamp));
-
                 filterAndRenderEmployees();
             } catch (error) {
                 console.error("خطأ في جلب الموظفين:", error);
@@ -179,7 +202,7 @@
             }
         }
 
-        // وظيفة لعرض الموظفين في الصفحة
+        // **5. دالة لعرض الموظفين في الواجهة**
         function renderEmployees(employees) {
             employeesList.innerHTML = '';
             if (employees.length === 0) {
@@ -204,7 +227,7 @@
                                     <p class="text-gray-600 text-sm mt-1">${employee.headline || 'بدون عنوان وظيفي'}</p>
                                     <div class="flex items-center text-gray-500 text-sm mt-2">
                                         <i class="fas fa-map-marker-alt ml-1"></i>
-                                        <span>${employee.contact?.location || 'غير محدد'}</span>
+                                        <span>${employee.contact?.location?.city || 'غير محدد'}، ${employee.contact?.location?.state || 'غير محدد'}</span>
                                         <span class="mx-2">•</span>
                                         <i class="fas fa-briefcase ml-1"></i>
                                         <span>${employee.experience || 'غير محدد'}</span>
@@ -227,12 +250,10 @@
                                     <span>${getTimeElapsed(employee.timestamp)}</span>
                                 </div>
                                 <div class="flex space-x-3 rtl:space-x-reverse">
-                                    <button class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 text-sm">
+                                    <a href="chat.html?employeeId=${employee.id}"
+                                        class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 text-sm">
                                         <i class="fas fa-envelope ml-1"></i> تواصل
-                                    </button>
-                                    <button class="px-4 py-2 bg-gray-100 text-gray-800 rounded-lg hover:bg-gray-200 text-sm">
-                                        <i class="fas fa-user-circle ml-1"></i> الملف الشخصي
-                                    </button>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -242,52 +263,42 @@
             }
         }
 
-        // وظيفة فلترة وعرض الموظفين
+        // **6. دالة للفلترة والبحث**
+        // تم تعديل هذه الدالة لتأخذ في الاعتبار فقط الولاية والمدينة
         function filterAndRenderEmployees() {
             const searchTerm = searchInput.value.toLowerCase();
             const selectedState = stateFilter.value;
-            const selectedStatus = statusFilter.value;
+            const selectedCity = cityFilter.value;
 
             const filteredEmployees = allEmployees.filter(employee => {
-                // فلترة حسب البحث المتقدم (المرادفات)
                 const searchTerms = searchTerm.split(' ');
+                const employeeLocation = employee.contact?.location || {};
+
                 const matchesSearch = searchTerms.every(term => {
-                    const employeeText = `${employee.name || ''} ${employee.headline || ''} ${employee.contact?.location || ''} ${employee.experience || ''} ${employee.skills?.join(' ') || ''}`.toLowerCase();
-                    if (employeeText.includes(term)) {
-                        return true;
-                    }
-                    for (const key in synonyms) {
-                        if (synonyms[key].includes(term) && employeeText.includes(key)) {
-                            return true;
-                        }
-                    }
+                    const employeeText = `${employee.name || ''} ${employee.headline || ''} ${employeeLocation.state || ''} ${employeeLocation.city || ''} ${employee.experience || ''} ${employee.skills?.join(' ') || ''}`.toLowerCase();
+                    if (employeeText.includes(term)) return true;
                     return false;
                 });
 
-                // فلترة حسب الولاية
-                const matchesState = selectedState === '' || (employee.contact?.location && employee.contact.location === selectedState);
+                const matchesState = selectedState === '' || (employeeLocation.state && employeeLocation.state === selectedState);
+                const matchesCity = selectedCity === '' || (employeeLocation.city && employeeLocation.city === selectedCity);
 
-                // فلترة حسب الحالة
-                const matchesStatus = selectedStatus === '' || (employee.jobStatus && employee.jobStatus === selectedStatus);
-
-                return matchesSearch && matchesState && matchesStatus;
+                return matchesSearch && matchesState && matchesCity;
             });
 
             renderEmployees(filteredEmployees);
         }
 
-        // وظيفة مساعدة لحساب الوقت المنقضي
+        // **7. دالة لحساب الوقت المنقضي**
         function getTimeElapsed(timestamp) {
             const now = new Date();
             const employeeDate = new Date(timestamp);
             const diffInSeconds = Math.floor((now - employeeDate) / 1000);
-
             const minutes = Math.floor(diffInSeconds / 60);
             const hours = Math.floor(minutes / 60);
             const days = Math.floor(hours / 24);
             const weeks = Math.floor(days / 7);
             const years = Math.floor(days / 365);
-
             if (years > 0) return `منذ ${years} سنة`;
             if (weeks > 0) return `منذ ${weeks} أسبوع`;
             if (days > 0) return `منذ ${days} يوم`;
@@ -295,12 +306,41 @@
             if (minutes > 0) return `منذ ${minutes} دقيقة`;
             return 'الآن';
         }
+        
+        // **8. مستمعي الأحداث**
+        onAuthStateChanged(auth, (user) => {
+            if (user) {
+                currentUserId = user.uid;
+                fetchEmployees();
+            } else {
+                currentUserId = null;
+                loadingIndicator.classList.add('hidden');
+                employeesList.innerHTML = '<div class="text-center text-red-500 p-8">يجب عليك تسجيل الدخول لعرض الموظفين.</div>';
+            }
+        });
 
-        // تشغيل جلب البيانات عند تحميل الصفحة
-        document.addEventListener('DOMContentLoaded', fetchEmployees);
         searchInput.addEventListener('input', filterAndRenderEmployees);
-        stateFilter.addEventListener('change', filterAndRenderEmployees);
-        statusFilter.addEventListener('change', filterAndRenderEmployees);
+        stateFilter.addEventListener('change', () => {
+            const selectedState = stateFilter.value;
+            cityFilter.innerHTML = '<option value="">جميع المدن</option>';
+            cityFilter.disabled = true;
+
+            if (selectedState && citiesByState[selectedState]) {
+                citiesByState[selectedState].forEach(city => {
+                    const option = document.createElement('option');
+                    option.value = city;
+                    option.textContent = city;
+                    cityFilter.appendChild(option);
+                });
+                cityFilter.disabled = false;
+            }
+            filterAndRenderEmployees();
+        });
+        cityFilter.addEventListener('change', filterAndRenderEmployees);
+
+        document.addEventListener('click', (e) => {
+            // حذف زر "قبول الموظف" من الكود
+        });
     </script>
 </body>
 </html>
