--- a/employee_listing_page.html
+++ b/employee_listing_page.html
@@ -191,7 +191,8 @@
             try {
                 const querySnapshot = await getDocs(collection(db, "employees"));
                 allEmployees = querySnapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
-                allEmployees.sort((a, b) => new Date(b.timestamp) - new Date(a.timestamp));
+                // تم تعديل هذه السطر لضمان الفرز الصحيح، ولكن المشكلة كانت في عرض الوقت وليس الفرز
+                allEmployees.sort((a, b) => (b.timestamp?.seconds || 0) - (a.timestamp?.seconds || 0)); 
                 filterAndRenderEmployees();
             } catch (error) {
                 console.error("خطأ في جلب الموظفين:", error);
@@ -214,6 +215,11 @@
                         : '';
                     const statusClass = employee.jobStatus === 'متاح للعمل' ? 'status-available' : 'status-not-looking';
 
+                    // تعديل: حل مشكلة الموقع
+                    const employeeCity = employee.location?.city || employee.contact?.location?.city || 'غير محدد';
+                    const employeeState = employee.location?.state || employee.contact?.location?.state || 'غير محدد';
+                    const locationText = `${employeeCity}، ${employeeState}`;
+
                     const employeeCard = document.createElement('div');
                     employeeCard.className = 'bg-white rounded-xl shadow-sm employee-card overflow-hidden p-6';
 
@@ -226,10 +232,9 @@
                                     <p class="text-gray-600 text-sm mt-1">${employee.headline || 'بدون عنوان وظيفي'}</p>
                                     <div class="flex items-center text-gray-500 text-sm mt-2">
                                         <i class="fas fa-map-marker-alt ml-1"></i>
-                                        <span>${employee.contact?.location?.city || 'غير محدد'}، ${employee.contact?.location?.state || 'غير محدد'}</span>
+                                        <span>${locationText}</span>
                                         <span class="mx-2">•</span>
-                                        <i class="fas fa-briefcase ml-1"></i>
-                                        <span>${employee.experience || 'غير محدد'}</span>
+                                        <span>الخبرة: ${employee.experience || 'غير محدد'}</span>
                                     </div>
                                 </div>
                             </div>
@@ -274,16 +279,19 @@
 
             const filteredEmployees = allEmployees.filter(employee => {
                 const searchTerms = searchTerm.split(' ');
-                const employeeLocation = employee.contact?.location || {};
+
+                // تعديل: حل مشكلة الموقع
+                const employeeCity = employee.location?.city || employee.contact?.location?.city || '';
+                const employeeState = employee.location?.state || employee.contact?.location?.state || '';
 
                 const matchesSearch = searchTerms.every(term => {
-                    const employeeText = `${employee.name || ''} ${employee.headline || ''} ${employeeLocation.state || ''} ${employeeLocation.city || ''} ${employee.experience || ''} ${employee.skills?.join(' ') || ''}`.toLowerCase();
+                    const employeeText = `${employee.name || ''} ${employee.headline || ''} ${employeeState || ''} ${employeeCity || ''} ${employee.experience || ''} ${employee.skills?.join(' ') || ''}`.toLowerCase();
                     if (employeeText.includes(term)) return true;
                     return false;
                 });
 
-                const matchesState = selectedState === '' || (employeeLocation.state && employeeLocation.state === selectedState);
-                const matchesCity = selectedCity === '' || (employeeLocation.city && employeeLocation.city === selectedCity);
+                const matchesState = selectedState === '' || (employeeState === selectedState);
+                const matchesCity = selectedCity === '' || (employeeCity === selectedCity);
 
                 return matchesSearch && matchesState && matchesCity;
             });
@@ -291,22 +299,27 @@
             renderEmployees(filteredEmployees);
         }
 
-        // **7. دالة لحساب الوقت المنقضي**
+        // **7. دالة لحساب الوقت المنقضي (تم تعديلها)**
         function getTimeElapsed(timestamp) {
+            if (!timestamp) return 'غير محدد';
+
             const now = new Date();
-            const employeeDate = new Date(timestamp);
+            const employeeDate = new Date(timestamp.seconds * 1000);
             const diffInSeconds = Math.floor((now - employeeDate) / 1000);
+
+            if (diffInSeconds < 60) return 'الآن';
             const minutes = Math.floor(diffInSeconds / 60);
+            if (minutes < 60) return `منذ ${minutes} دقيقة`;
             const hours = Math.floor(minutes / 60);
+            if (hours < 24) return `منذ ${hours} ساعة`;
             const days = Math.floor(hours / 24);
+            if (days < 7) return `منذ ${days} يوم`;
             const weeks = Math.floor(days / 7);
+            if (weeks < 4) return `منذ ${weeks} أسبوع`;
+            const months = Math.floor(days / 30);
+            if (months < 12) return `منذ ${months} شهر`;
             const years = Math.floor(days / 365);
-            if (years > 0) return `منذ ${years} سنة`;
-            if (weeks > 0) return `منذ ${weeks} أسبوع`;
-            if (days > 0) return `منذ ${days} يوم`;
-            if (hours > 0) return `منذ ${hours} ساعة`;
-            if (minutes > 0) return `منذ ${minutes} دقيقة`;
-            return 'الآن';
+            return `منذ ${years} سنة`;
         }
 
         // **8. دالة توظيف موظف**
@@ -360,6 +373,12 @@
             filterAndRenderEmployees();
         });
         cityFilter.addEventListener('change', filterAndRenderEmployees);
+
+        // This is necessary to expose the hireEmployee function to the onclick event in the HTML
+        window.hireEmployee = hireEmployee; 
     </script>
 </body>
 </html>
+هذا كود عرض الوظائف
+ زر حفظ   ماذا يجب ان اعمل 
+وكذلك زر التفاصيل
