--- a/login_page.html
+++ b/login_page.html
@@ -12,12 +12,30 @@
             font-family: 'Tajawal', sans-serif;
             background-color: #f5f7fa;
         }
+        .password-requirement-item {
+            display: flex;
+            align-items: center;
+            font-size: 0.875rem;
+            color: #6b7280;
+            margin-top: 0.5rem;
+        }
+        .password-requirement-item.valid {
+            color: #10b981;
+        }
     </style>
 </head>
 <body class="flex items-center justify-center min-h-screen">
     <div class="w-full max-w-md bg-white rounded-xl shadow-lg p-8">
         <h2 class="text-3xl font-extrabold text-center text-gray-900 mb-6">إنشاء حساب جديد</h2>
         <form id="registerForm" class="space-y-6">
+            <div>
+                <label for="name" class="block text-sm font-medium text-gray-700">الاسم الكامل</label>
+                <div class="mt-1">
+                    <input id="name" name="name" type="text" required
+                           class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm text-right"
+                           placeholder="أدخل اسمك الكامل">
+                </div>
+            </div>
             <div>
                 <label for="email" class="block text-sm font-medium text-gray-700">البريد الإلكتروني</label>
                 <div class="mt-1">
@@ -32,6 +50,37 @@
                     <input id="password" name="password" type="password" required
                            class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm text-right"
                            placeholder="أدخل كلمة مرور قوية">
+                </div>
+                <div class="password-requirements mt-2" id="passwordRequirements">
+                    <p class="text-gray-500 text-sm">يجب أن تحتوي كلمة المرور على:</p>
+                    <div id="min-length" class="password-requirement-item">
+                        <i class="fas fa-check-circle ml-2 text-red-500"></i>
+                        <span>6 أحرف على الأقل</span>
+                    </div>
+                    <div id="has-upper" class="password-requirement-item">
+                        <i class="fas fa-check-circle ml-2 text-red-500"></i>
+                        <span>حرف كبير واحد على الأقل</span>
+                    </div>
+                    <div id="has-lower" class="password-requirement-item">
+                        <i class="fas fa-check-circle ml-2 text-red-500"></i>
+                        <span>حرف صغير واحد على الأقل</span>
+                    </div>
+                    <div id="has-number" class="password-requirement-item">
+                        <i class="fas fa-check-circle ml-2 text-red-500"></i>
+                        <span>رقم واحد على الأقل</span>
+                    </div>
+                    <div id="has-symbol" class="password-requirement-item">
+                        <i class="fas fa-check-circle ml-2 text-red-500"></i>
+                        <span>رمز واحد على الأقل</span>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <label for="confirmPassword" class="block text-sm font-medium text-gray-700">تأكيد كلمة المرور</label>
+                <div class="mt-1">
+                    <input id="confirmPassword" name="confirmPassword" type="password" required
+                           class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm text-right"
+                           placeholder="أعد إدخال كلمة المرور">
                 </div>
             </div>
             <div id="feedbackMessage" class="hidden text-center mt-4"></div>
@@ -49,6 +98,11 @@
                     تسجيل الدخول
                 </a>
             </p>
+        </div>
+        <div class="mt-2 text-center">
+            <a href="reset_password.html" class="font-medium text-blue-600 hover:text-blue-500 text-sm">
+                نسيت كلمة المرور؟
+            </a>
         </div>
     </div>
 
@@ -75,30 +129,87 @@
         // **2. ربط عناصر الواجهة بمتغيرات في الكود**
         const registerForm = document.getElementById('registerForm');
         const feedbackMessage = document.getElementById('feedbackMessage');
+        const nameInput = document.getElementById('name');
         const emailInput = document.getElementById('email');
         const passwordInput = document.getElementById('password');
+        const confirmPasswordInput = document.getElementById('confirmPassword');
+        const passwordRequirements = {
+            minLength: document.getElementById('min-length'),
+            hasUpper: document.getElementById('has-upper'),
+            hasLower: document.getElementById('has-lower'),
+            hasNumber: document.getElementById('has-number'),
+            hasSymbol: document.getElementById('has-symbol')
+        };
+        const checkIcon = '<i class="fas fa-check-circle ml-2 text-green-500"></i>';
+        const crossIcon = '<i class="fas fa-times-circle ml-2 text-red-500"></i>';
 
-        // **3. دالة التسجيل وإنشاء الحساب المعدلة**
+        // **3. دالة التحقق من كلمة المرور وعرض التغييرات في الواجهة**
+        function validatePassword() {
+            const password = passwordInput.value;
+            const checks = {
+                minLength: password.length >= 6,
+                hasUpper: /[A-Z]/.test(password),
+                hasLower: /[a-z]/.test(password),
+                hasNumber: /[0-9]/.test(password),
+                hasSymbol: /[!@#$%^&*(),.?":{}|<>]/.test(password)
+            };
+
+            for (const key in checks) {
+                const element = passwordRequirements[key];
+                if (checks[key]) {
+                    element.classList.add('valid');
+                    element.querySelector('i').className = 'fas fa-check-circle ml-2 text-green-500';
+                } else {
+                    element.classList.remove('valid');
+                    element.querySelector('i').className = 'fas fa-times-circle ml-2 text-red-500';
+                }
+            }
+
+            return Object.values(checks).every(Boolean);
+        }
+
+        // إضافة مستمعي الأحداث للتحقق المباشر
+        passwordInput.addEventListener('input', validatePassword);
+
+        // **4. دالة التسجيل وإنشاء الحساب المعدلة**
         registerForm.addEventListener('submit', async (e) => {
             e.preventDefault();
+            const name = nameInput.value;
             const email = emailInput.value;
             const password = passwordInput.value;
+            const confirmPassword = confirmPasswordInput.value;
 
             // إخفاء رسالة الخطأ السابقة
             feedbackMessage.classList.add('hidden');
             feedbackMessage.textContent = '';
+
+            // التحقق من توافق كلمات المرور
+            if (password !== confirmPassword) {
+                feedbackMessage.classList.remove('hidden');
+                feedbackMessage.classList.add('text-red-500');
+                feedbackMessage.textContent = 'كلمة المرور وتأكيدها غير متطابقين.';
+                return;
+            }
+
+            // التحقق من قوة كلمة المرور
+            if (!validatePassword()) {
+                feedbackMessage.classList.remove('hidden');
+                feedbackMessage.classList.add('text-red-500');
+                feedbackMessage.textContent = 'كلمة المرور لا تستوفي جميع المتطلبات.';
+                return;
+            }
 
             try {
                 // إنشاء حساب المستخدم في Firebase Authentication
                 const userCredential = await createUserWithEmailAndPassword(auth, email, password);
                 const user = userCredential.user;
 
-                // **التعديل الجديد: إرسال بريد إلكتروني للتحقق**
+                // إرسال بريد إلكتروني للتحقق
                 await sendEmailVerification(user);
 
                 // إنشاء وثيقة للمستخدم في Firestore
                 await setDoc(doc(db, "employees", user.uid), {
-                    name: 'موظف جديد',
+                    name: name,
                     email: user.email,
                     jobStatus: 'غير متاح للعمل',
                     createdAt: serverTimestamp()
@@ -109,7 +220,7 @@
                 feedbackMessage.classList.add('text-green-500');
                 feedbackMessage.textContent = 'تم إنشاء حسابك بنجاح! يرجى التحقق من بريدك الإلكتروني لتفعيل الحساب.';
 
-                // يمكنك إفراغ حقول النموذج بعد التسجيل
+                // إفراغ حقول النموذج بعد التسجيل
                 registerForm.reset();
 
             } catch (error) {
@@ -125,7 +236,7 @@
                         feedbackMessage.textContent = 'صيغة البريد الإلكتروني غير صحيحة.';
                         break;
                     case 'auth/weak-password':
-                        feedbackMessage.textContent = 'كلمة المرور ضعيفة. يجب أن تتكون من 6 أحرف على الأقل.';
+                        feedbackMessage.textContent = 'كلمة المرور ضعيفة جدًا.';
                         break;
                     default:
                         feedbackMessage.textContent = 'حدث خطأ غير متوقع. يرجى المحاولة لاحقًا.';
