--- a/reset_password.html
+++ b/reset_password.html
@@ -1,35 +1,42 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>استعادة كلمة المرور</title>
-    <link rel="stylesheet" href="style.css">
+    <title>شغلني - استعادة كلمة المرور</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;900&display=swap');
+        body {
+            font-family: 'Tajawal', sans-serif;
+        }
+    </style>
 </head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">الصفحة الرئيسية</a></li>
-                <li><a href="login.html">تسجيل الدخول</a></li>
-            </ul>
-        </nav>
-    </header>
+<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+    <div class="w-full max-w-md mx-auto p-8 bg-white rounded-xl shadow-lg">
+        <div class="text-center mb-8">
+            <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/4c6ac0b9-d0f3-4546-89b8-cf881347ac80.png" alt="شعار موقع شغلني" class="h-16 mx-auto mb-4">
+            <h1 class="text-2xl font-bold text-gray-800">نسيت كلمة المرور؟</h1>
+            <p class="text-gray-600 mt-2">لا تقلق، يحدث ذلك للجميع. أدخل بريدك الإلكتروني وسنرسل لك رابطًا لإعادة تعيين كلمة المرور.</p>
+        </div>
 
-    <section class="reset-password-section">
-        <h2>استعادة كلمة المرور</h2>
-        <form action="reset-link-sent.html" method="POST"> <!-- سيتم ربط هذا بالإجراء لاحقًا -->
-            <label for="email">البريد الإلكتروني:</label>
-            <input type="email" id="email" name="email" required placeholder="أدخل بريدك الإلكتروني">
-
-            <button type="submit">إرسال رابط استعادة كلمة المرور</button>
+        <form>
+            <div class="mb-6">
+                <label for="email" class="block text-gray-700 font-bold mb-2">البريد الإلكتروني</label>
+                <input type="email" id="email" name="email" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="أدخل بريدك الإلكتروني" required>
+            </div>
+            
+            <button type="submit" class="w-full bg-blue-600 text-white font-bold py-3 px-4 rounded-lg hover:bg-blue-700 transition duration-300">
+                إرسال رابط استعادة كلمة المرور
+            </button>
         </form>
 
-        <p>تذكر كلمة المرور؟ <a href="login.html">تسجيل الدخول</a></p>
-    </section>
-
-    <footer>
-        <p>جميع الحقوق محفوظة &copy; 2025</p>
-    </footer>
+        <div class="text-center mt-6">
+            <a href="login.html" class="text-blue-600 font-medium hover:underline">
+                تذكرت كلمة المرور؟ العودة لتسجيل الدخول
+            </a>
+        </div>
+    </div>
 </body>
 </html>
